k8s-aks/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: collector-shop
  labels:
    app: collector-shop
