k8s-aks/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: collector-frontend
  namespace: collector-shop
  labels:
    app: collector-frontend
    tier: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: collector-frontend
  template:
    metadata:
      labels:
        app: collector-frontend
        tier: frontend
    spec:
      containers:
        - name: frontend
          image: collectorshopbk.azurecr.io/collector-frontend:v1
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 15
            periodSeconds: 20
            timeoutSeconds: 2
            failureThreshold: 3
          resources:
            requests:
              cpu: "50m"
              memory: "64Mi"
            limits:
              cpu: "300m"
              memory: "256Mi"
