k8s-aks/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: collector-frontend
  namespace: collector-shop
  labels:
    app: collector-frontend
spec:
  type: LoadBalancer
  selector:
    app: collector-frontend
  ports:
    - name: http
      port: 80
      targetPort: 80
