k8s-aks/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: backend-restrict-ingress
  namespace: collector-shop
spec:
  podSelector:
    matchLabels:
      app: collector-backend
  policyTypes:
    - Ingress
  ingress:
    - from: []
      ports:
        - protocol: TCP
          port: 4003
